--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,9 @@
-<div>Hi {{ title }}</div>
-<hr />
-
-<app-users></app-users>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
+      <h3>Hi {{ title }}</h3>
+      <hr />
+      <app-users></app-users>
+    </div>
+  </div>
+</div>
