Different types of Selectors supported for creating components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,9 @@
     <div class="col-xs-12">
       <h3>Hi {{ title }}</h3>
       <hr />
-      <app-users></app-users>
+      <!-- <app-users></app-users> -->
+      <!-- <div app-users></div> -->
+      <div class="app-users"></div>
     </div>
   </div>
 </div>
