--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,3 +1,6 @@
+<h3>Users Component</h3>
+<button class="btn btn-primary" [disabled]="!allowNewUser">Add User</button>
+<div [innerText]="allowNewUser"></div>
 <app-user></app-user>
 <app-user></app-user>
 <app-user></app-user>
