Event Binding in Angular

--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,6 +1,6 @@
 <h3>Users Component</h3>
-<button class="btn btn-primary" [disabled]="!allowNewUser">Add User</button>
-<div [innerText]="allowNewUser"></div>
+<button class="btn btn-primary" [disabled]="!allowNewUser" (click)="changeUserCreatedStatus()">Add User</button>
+<div> {{userCreatedStatus}}</div>
 <app-user></app-user>
 <app-user></app-user>
 <app-user></app-user>
