--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,4 +1,9 @@
 <h3>Users Component</h3>
+<div class="my-2">
+    <label>User Name</label>
+    <input type="text" class="form-control" (input)="onUpdateUser($event)" />
+    <div>{{ userName }}</div>
+</div>
 <button class="btn btn-primary" [disabled]="!allowNewUser" (click)="changeUserCreatedStatus()">Add User</button>
 <div> {{userCreatedStatus}}</div>
 <app-user></app-user>
