Two way Data Binding in the angular

--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,7 +1,8 @@
 <h3>Users Component</h3>
 <div class="my-2">
     <label>User Name</label>
-    <input type="text" class="form-control" (input)="onUpdateUser($event)" />
+    <!-- <input type="text" class="form-control" (input)="onUpdateUser($event)" /> -->
+    <input type="text" class="form-control" [(ngModel)]="userName" />
     <div>{{ userName }}</div>
 </div>
 <button class="btn btn-primary" [disabled]="!allowNewUser" (click)="changeUserCreatedStatus()">Add User</button>
