--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,3 +1,3 @@
-<div class="my-2" [ngStyle]="{'background-color' : getColor()}">
+<div class="my-2" [ngStyle]="{'background-color' : getColor()}" [ngClass]="{ offline : userStatus === 'Offline' }">
     User with Id {{ userId }} is {{ getUserStatus() }}
 </div>
