--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,19 @@
-<div class="container">
+<!-- <div class="container">
   <div class="row">
     <div class="col-xs-12">
       <h3>Hi {{ title }}</h3>
       <hr />
-      <!-- <app-users></app-users> -->
-      <!-- <div app-users></div> -->
+      <app-users></app-users> 
+     <div app-users></div>
       <div class="app-users"></div>
+    </div>
+  </div>
+</div> -->
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12">
+      <app-new-users></app-new-users>
     </div>
   </div>
 </div>
