Send Data from Child to Parent Component

--- a/src/app/new-users/new-users.component.html
+++ b/src/app/new-users/new-users.component.html
@@ -1,11 +1,4 @@
-<div class="formgroup">
-    <h3>Add user</h3>
-    <label>User Name:</label>
-    <input type="text" class="form-control" [(ngModel)]="userName" />
-    <div class="mt-2">
-        <button class="btn btn-primary" (click)="onUserAdded()">Add user</button>
-    </div>
-</div>
+<app-adduser (userAdded)="onUserAdded($event)"></app-adduser>
 
 <div class="mt-3">
     <h3>Users List</h3>
