Using Local References in Angular

--- a/src/app/adduser/adduser.component.html
+++ b/src/app/adduser/adduser.component.html
@@ -1,8 +1,8 @@
 <div class="formgroup">
     <h3>Add user</h3>
     <label>User Name:</label>
-    <input type="text" class="form-control" [(ngModel)]="userName" />
+    <input type="text" class="form-control" #userInput />
     <div class="mt-2">
-        <button class="btn btn-primary" (click)="onUserAdded()">Add user</button>
+        <button class="btn btn-primary" (click)="onUserAdded(userInput)">Add user</button>
     </div>
 </div>
