Template with @ViewChild and the type ElementRef

--- a/src/app/adduser/adduser.component.html
+++ b/src/app/adduser/adduser.component.html
@@ -3,6 +3,6 @@
     <label>User Name:</label>
     <input type="text" class="form-control" #userInput />
     <div class="mt-2">
-        <button class="btn btn-primary" (click)="onUserAdded(userInput)">Add user</button>
+        <button class="btn btn-primary" (click)="onUserAdded()">Add user</button>
     </div>
 </div>
