--- a/src/app/new-users/new-users.component.html
+++ b/src/app/new-users/new-users.component.html
@@ -2,5 +2,7 @@
 
 <div class="mt-3">
     <h3>Users List</h3>
-    <app-new-user *ngFor="let user of userList" [user]="user"></app-new-user>
+    <app-new-user *ngFor="let user of userList" [user]="user">
+        <p>Username : {{ user }}</p>
+    </app-new-user>
 </div>
