--- a/src/app/new-users/new-users.component.html
+++ b/src/app/new-users/new-users.component.html
@@ -2,7 +2,8 @@
 
 <div class="mt-3">
     <h3>Users List</h3>
-    <app-new-user *ngFor="let user of userList" [user]="user">
+    <button class="btn btn-primary" (click)="onNameChange()">Change Name</button>
+    <app-new-user *ngFor="let user of userList" [user]="user" [name]="name">
         <p>Username : {{ user }}</p>
     </app-new-user>
 </div>
