Life Cycle Hooks Part 2

--- a/src/app/new-users/new-users.component.html
+++ b/src/app/new-users/new-users.component.html
@@ -3,6 +3,7 @@
 <div class="mt-3">
     <h3>Users List</h3>
     <button class="btn btn-primary" (click)="onNameChange()">Change Name</button>
+    <button class="btn btn-danger" (click)="onDeleteComponent()">Delete Component</button>
     <app-new-user *ngFor="let user of userList" [user]="user" [name]="name">
         <p>Username : {{ user }}</p>
     </app-new-user>
