--- a/src/app/new-users/new-users.component.html
+++ b/src/app/new-users/new-users.component.html
@@ -5,6 +5,6 @@
     <button class="btn btn-primary" (click)="onNameChange()">Change Name</button>
     <button class="btn btn-danger" (click)="onDeleteComponent()">Delete Component</button>
     <app-new-user *ngFor="let user of userList" [user]="user" [name]="name">
-        <p>Username : {{ user }}</p>
+        <p #userParagraph>Username : {{ user }}</p>
     </app-new-user>
 </div>
