--- a/src/app/new-users/new-users.component.html
+++ b/src/app/new-users/new-users.component.html
@@ -16,3 +16,7 @@
 <div appHighlightText>
     Using custom Attribute - Please add the background color to Red
 </div>
+
+<div appRendererHighlight>
+    Using Renderer2 - Please add the background color to Green
+</div>
