Sending input data to the Directives as Input properties

--- a/src/app/new-users/new-users.component.html
+++ b/src/app/new-users/new-users.component.html
@@ -17,6 +17,6 @@
     Using custom Attribute - Please add the background color to Red
 </div>
 
-<div appRendererHighlight>
+<div appRendererHighlight [defaultColor]="'blue'" highlightColor="orange">
     Using Renderer2 - Please add the background color to Green
 </div>
