Concept of the Structural Directives how it works behind

--- a/src/app/new-users/new-users.component.html
+++ b/src/app/new-users/new-users.component.html
@@ -20,3 +20,13 @@
 <div appRendererHighlight [defaultColor]="'blue'" highlightColor="orange">
     Using Renderer2 - Please add the background color to Green
 </div>
+
+<div *ngIf="isAvailable">
+    Show the Div when isAvailable is true
+</div>
+
+<ng-template [ngIf]="isAvailable">
+    <div>
+        Show the Div when isAvailable is true
+    </div>
+</ng-template>
