Create Custom Structural Directive using TemplateRef and ViewContainerRef

--- a/src/app/new-users/new-users.component.html
+++ b/src/app/new-users/new-users.component.html
@@ -30,3 +30,11 @@
         Show the Div when isAvailable is true
     </div>
 </ng-template>
+
+<div>
+    <button class="btn btn-warning" (click)="isAvailable = !isAvailable">Toggle Condition</button>
+</div>
+
+<div *appAlternateIf="isAvailable">
+    This condition enables custom structural directive
+</div>
